--- a/art-quiz/css/style.css
+++ b/art-quiz/css/style.css
@@ -185,8 +185,15 @@ body{
   margin-bottom: 40px;
 }
 
+.category__timer-close{
+  background-image: url('../assets/svg/close.svg');
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+
 .category__timer-line{
-  width: 736px;
+  width: 710px;
   height: 4px;
   background-color: #A4A4A4;
   position: relative;
@@ -196,7 +203,6 @@ body{
 .category__timer-line__dynamic{
   position: absolute;
   left: 0;
-  /* right: 0; */
   bottom: 0;
   top: 0;
   background-color: #FFBCA2;
@@ -313,6 +319,7 @@ body{
   background-color: rgba(0, 0, 0, .8);
   top: 0;
   left: 0;
+  
 }
 
 .popup--active{
@@ -327,12 +334,49 @@ body{
   padding: 10px 10px;
 }
 
+
+.popup__content-deactivate{
+  animation-name: popup-deactivate;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes popup-deactivate {
+  0% {
+    opacity: 1;
+    transform: perspective(800px) translate(0, 0) rotateX(0deg);
+  }
+
+  100% {
+    opacity: 0;
+    transform: perspective(800px) translate(0, -200%) rotateX(45deg);
+  }
+}
+
 .popup__content{
   background-color: #fff;
   color: #010101;
   max-width: 522px;
   padding: 30px;
   border-radius: 20px;
+}
+
+.popup--active {
+  animation-name: popup;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+    transform: perspective(800px) translate(0, -200%) rotateX(45deg);
+  }
+
+  100% {
+    opacity: 1;
+    transform: perspective(800px) translate(0, 0) rotateX(0deg);
+  }
 }
 
 .popup__final .popup__content{
@@ -727,6 +771,40 @@ body{
 
 .settngs__btn:hover::before{
   left: 40px;
+}
+
+.deactivate__page{
+  animation-name: deactivate;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+
+@keyframes deactivate{
+  0% {
+    transform: translateX(0);
+  }
+
+  100%{
+    transform: translateX(-200%);
+  }
+}
+
+.active__page{
+  animation-name: activate;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+
+@keyframes activate{
+  0% {
+    transform: translateX(-200%);
+  }
+
+  100%{
+    transform: translateX(0);
+  }
 }
 
 .settings__main{
