feat: add new design

--- a/migration-newip-to-ts/src/components/view/sources/sources.css
+++ b/migration-newip-to-ts/src/components/view/sources/sources.css
@@ -1,34 +1,46 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: 120px;
+    flex-wrap: wrap;
+    max-width: 700px;
+    height: 274px;
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
+    margin: 0 auto;
+    justify-content: center;
+    border: 5px solid #363535;
+    border-radius: 12px;
+    background-color: #99f2c8;
 }
 
 .source__item {
     background: none;
-    border: 2px solid #30c5ff;
+    border: 2px solid #151616;
+    border-radius: 10px;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
     padding: 1em 2em;
-    color: #70d6ff;
+    color: #151616;
     transition: 0.25s;
     cursor: pointer;
 }
 
 .source__item:hover,
 .source__item:focus {
-    border-color: #3fcc59;
-    color: #69db7e;
-    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    border-color: #266331;
+    color: #151616;
+    box-shadow: 0 0.5em 0.5em -0.4em #266331;
     transform: translateY(-0.25em);
 }
 
 .source__item-name {
     font-weight: 400;
     white-space: nowrap;
+}
+
+@media (max-width: 340px)  {
+    .source__item{
+        padding: 0.8em 1.2em;
+    }
 }
