--- a/christmas-task/src/style.css
+++ b/christmas-task/src/style.css
@@ -423,7 +423,14 @@ select{
   margin-bottom: 22px;
 }
 
-.filters__btn-reset{
+.filters__btns{
+  display: flex;
+  justify-content: space-between;
+}
+
+.filters__btn-reset,
+.filters__btn-settings{
+  display: block;
   font-size: 16px;
   line-height: 19px;
   padding: 7px 33px;
